--- a/src/index.css
+++ b/src/index.css
@@ -71,8 +71,6 @@ button:focus-visible {
     }
 } */
 
-
-
 /* from SPICED */
 
 * {
@@ -203,24 +201,10 @@ body {
     padding: 0 0.5rem;
 }
 
+/* My styles */
 
-
-
-/* FROM mapbox guide */
-
-/* .map-container {
-    height: 400px;
+#marker {
+    background: none;
+    border: none;
+    cursor: pointer;
 }
-
-.sidebar {
-    background-color: rgba(35, 55, 75, 0.9);
-    color: #fff;
-    padding: 6px 12px;
-    font-family: monospace;
-    z-index: 1;
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin: 12px;
-    border-radius: 4px;
-} */
