--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-#root {
+/* #root {
     max-width: 1280px;
     margin: 0 auto;
     padding: 2rem;
@@ -55,4 +55,4 @@
     left: 0;
     margin: 12px;
     border-radius: 4px;
-}
+} */
