--- a/src/index.css
+++ b/src/index.css
@@ -1,210 +1,28 @@
-/* basic from vite */
-
-/* :root {
-    font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 400;
-
-    color-scheme: light dark;
-    color: rgba(255, 255, 255, 0.87);
-    background-color: #242424;
-
-    font-synthesis: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-text-size-adjust: 100%;
-}
-
-a {
-    font-weight: 500;
-    color: #646cff;
-    text-decoration: inherit;
-}
-a:hover {
-    color: #535bf2;
-}
-
-body {
-    margin: 0;
-    display: flex;
-    place-items: center;
-    min-width: 320px;
-    min-height: 100vh;
-}
-
-h1 {
-    font-size: 3.2em;
-    line-height: 1.1;
-}
-
-button {
-    border-radius: 8px;
-    border: 1px solid transparent;
-    padding: 0.6em 1.2em;
-    font-size: 1em;
-    font-weight: 500;
-    font-family: inherit;
-    background-color: #1a1a1a;
-    cursor: pointer;
-    transition: border-color 0.25s;
-}
-button:hover {
-    border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-    outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-    :root {
-        color: #213547;
-        background-color: #ffffff;
-    }
-    a:hover {
-        color: #747bff;
-    }
-    button {
-        background-color: #f9f9f9;
-    }
-} */
-
-/* from SPICED */
-
 * {
     box-sizing: border-box;
 }
 
 body {
     margin: 0;
-    font-family: "Helvetica Neue", sans-serif;
-    font-size: 16px;
+    /* font-family: "Helvetica Neue", sans-serif;
+    font-size: 16px; */
     width: 100vw;
     height: 100vh;
 }
 
 #root {
-    width: 100%;
-    height: 100%;
+    background-color: #28a2e4;
+    background: url(./images/map1.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    min-height: 100vh;
 }
 
-.app {
-    width: 100%;
-    height: 100%;
-    display: flex;
-}
-
-.sidebar {
-    width: 400px;
-    padding: 1rem;
-}
-
-.sidebar h2 {
-    font-size: 1.2rem;
-    margin-bottom: 1rem;
-}
-
-.places-list {
-    margin-bottom: 3rem;
-}
-
-.places-list ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.places-list ul li {
-    line-height: 2.5rem;
-    font-size: 0.8rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: dodgerblue;
-    padding: 0 0.5rem;
-    margin-bottom: 0.5rem;
-    border-radius: 0.25rem;
-    color: white;
-}
-
-.places-list ul li span {
-    flex: 1;
-}
-
-.places-list ul li span:hover {
-    text-decoration: underline;
-}
-
-.places-list ul li button {
-    border: none;
-    height: 1.5rem;
-    width: 1.5rem;
-    padding: 0;
-    margin: 0;
-    font-size: 1.2rem;
-    background: transparent;
-    appearance: none;
-}
-
-.places-list ul li button:hover {
-    background-color: rgba(0, 0, 0, 0.1);
-}
-
-.add-place {
-    width: 100%;
-}
-
-.add-place form {
-    display: flex;
-    width: 100%;
-    position: relative;
-}
-
-.add-place ul {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 2.5rem;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.add-place ul li {
-    width: 100%;
-    line-height: 2.5rem;
-    font-size: 0.8rem;
-    padding: 0 0.5rem;
-    border-top: 1px solid rgba(0, 0, 0, 0.3);
-    border-right: 1px solid rgba(0, 0, 0, 0.3);
-    border-left: 1px solid rgba(0, 0, 0, 0.3);
-}
-
-.add-place ul li:last-child {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-}
-
-.add-place ul li:hover {
-    cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.4);
-    color: white;
-}
-
-.add-place form > * {
-    line-height: 2rem;
-}
-
-.add-place form input {
-    flex: 1;
-    padding: 0 0.5rem;
-}
-
-/* My styles */
-
-#marker {
-    background: none;
-    border: none;
-    cursor: pointer;
+#my-modal {
+    background-color: "transparent";
+    border: "2px solid black";
+    border-radius: "10px";
+    margin: "5px";
 }
